# Hacksaw

./: .gitignore  CITATION.cff  README.md  patch.sh  qemu.sh  run.sh  setup.sh  test.sh  testrun.sh
.github/: dependabot.yml
.github/workflows/: codeql.yml
.pipelines/: build-llvm-plugins.sh  prepare.sh
comp_unit/: Dockerfile  do-comp-unit.sh  docker-shell.sh  gen-dep.py  get-build-deps.py  get-builtin-objs.py  get-obj-kconf-expr.py  kreader-hacksaw  kreader-normalize.py  present-dep.py  run-docker.sh  test-comp-unit.sh
compile_unit/: get-build-deps.py  get-obj-kconf-expr.py  match-build-conf.py
dependency/: alldevdrv.py  builddep.py  checkmodsym.py  gen_objdep.py
docker/: Dockerfile  analyze.sh  build-containers.sh  build-docker.sh  entrypoint.sh  hacksaw.sh  patch.sh  prepare.sh
docker/builder/: Dockerfile  entrypoint.sh
docker/imager/: Dockerfile  extract.sh  hacksaw.sh  update.sh
docker/patcher/: Dockerfile  entrypoint.sh
docker/rtti/: Dockerfile
driver_model/: Dockerfile  batch-opt-pass.py  do-driver-model.sh  extract-kernel-bc.py  get-builtin-objs.py  mod-obj-filter.py  run-docker.sh  test-driver-model.sh  uniq-funcs.py  wllvm-linux.sh  wllvm.config  wllvm.kconfig.fragment
driver_model/llvm-pass/: CMakeLists.txt
driver_model/llvm-pass-busclass/: CMakeLists.txt
driver_model/llvm-pass-busclass/busclass/: BusClass.cpp  CMakeLists.txt
driver_model/llvm-pass-busclass/busclassassign/: CMakeLists.txt
driver_model/llvm-pass-busclassassign/busclassassign/: BusClassAssign.cpp
driver_model/llvm-pass-drvdevreg/: CMakeLists.txt
driver_model/llvm-pass-drvdevreg/drvdevreg/: CMakeLists.txt  Drvdevreg.cpp
driver_model/llvm-pass/drvdevreg/: DrvDevReg.cpp
gen_database/platform/: CMakeLists.txt
hwdb/: build.sh  gendb.sh  match-hw.py  probe-hw.sh  run-docker.sh
hwdb/platform/: CMakeLists.txt  buildcallgraph.cpp  buildplatform.cpp
hwdb/prepare_database/: gen_objdep.sh  get_asm_symbols.sh  get_asm_symbols_src.sh  modinitcb.py  modinitcb.sh  modinitcb_macro.list  prepare_database.sh
hwdb/prepare_kernel/: buildir.py  linkir.py  prepare_kernel.sh
kernel/: build_target_kernel.sh  buildir.py  hacksaw.kconfig.fragment  linkir.py  nosig.kconfig.fragment  prepare_bzimage.sh  prepare_kernel.sh  prepare_kernel_centos.sh
kernel_patch/: 5.1x-pahole.patch  checkmodsym.py  copy_noinline_imptab.sh  disasm.py  gen_objdep.sh  get-target-objdep.sh  hwfilter.py  pahole.patch  patch-disk-image.py  repack-bzimage.py  repack_bzimage.py  run.sh  runfilter.py  touch-nonbc-objs.sh
kernel_patch/systemd/: forklift.service  forklift.sh
test/: run.sh
test/hwprof/: qemu-kvm-virtio-net.txt  qemu-kvm.txt
utils/: cleanup.sh  get-builtin-info.sh  get-kernel-info.sh  get-mod-fw.sh  get-mod-init.py  get-mod-init.sh  get-sysmap-init.sh  get-vmlinux-init.sh  unpack-initramfs.sh
